<resources>
    <string name="app_name">Clean City</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pendingActivity">Pending Complaints</string>
    <string name="complaintDetail">Complaint Detail</string>
    <string name="complaintActivity">Complaints</string>
    <string name="imageCapture">Garbage Dump</string>
    <string name="nothing_in_complaints">Nothing in Complaints</string>
    <string name="complaints_posted_by_you">Complaints posted by you</string>
    <string name="will_be_shown_here">will be shown here.</string>
    <string name="pencil_image">Pencil Image</string>
    <string name="capturedimage">capturedImage</string>
    <string name="details_optional">Details (Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="city">City</string>
    <string name="clean">Clean</string>
    <string name="nothing_in_pending_complaints">Nothing in Pending Complaints</string>
    <string name="complaints_pending">Complaints Pending</string>
    <string name="powered_by">powered by</string>
    <string name="udacity_nanodegree">Udacity Nanodegree</string>
    <string name="skip">SKIP</string>
    <string name="garbage">Garbage</string>
    <string name="clean_city">‘Clean City’</string>
    <string name="capstone_project_stage_2">Capstone Project Stage - 2</string>
    <string name="nano">nano</string>
    <string name="degree">degree</string>
    <string name="step_one">Step One</string>
    <string name="whenever_you_see_a_dirty_place">Whenever you see a dirty place</string>
    <string name="step_three">Step Three</string>
    <string name="complaint_registered_in_our_system">Complaint registered in our system</string>
    <string name="step_two">Step Two</string>
    <string name="click_a_picture_and_submit">Click a picture and submit</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="pending_upload">Pending Upload</string>
    <string name="you_are_not_connected_to_internet_but_your_complaint_has_been_saved_post_it_later_from_pending_uploads_section">You are not connected to internet, but your complaint has been saved. Post it later from Pending Uploads section.</string>
    <string name="not_connected_to_internet">Not connected to internet!</string>
    <string name="view_pending_uploads">VIEW PENDING UPLOADS</string>
    <string name="post_another_complaint">POST ANOTHER COMPLAINT</string>
    <string name="sorry">Sorry!</string>
    <string name="sorry_something_went_wrong_please_try_again">Sorry! Something went wrong. Please try again.</string>
    <string name="thank_you">Thank You.</string>
    <string name="your_complaint_has_been_recorded_into_the_system">Your complaint has been recorded into the system.</string>
    <string name="complaint_id">Complaint ID:</string>
    <string name="vad02650001">VAD02650001</string>
    <string name="camera_button">Camera Button</string>
    <string name="pending_uploads">Pending Uploads</string>
    <string name="post">Post Complaint</string>
    <string name="widget_title">Pending Uploads</string>
    <string name="no_pending_complaints">No Pending Complaints</string>
    <string name="pending_complaints">Pending Complaints</string>
    <string name="post_complaint">Post Complaint</string>
</resources>
