<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="10dp"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingTop="10dp"
            android:src="@drawable/failed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/not_connected_to_internet"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/you_are_not_connected_to_internet_but_your_complaint_has_been_saved_post_it_later_from_pending_uploads_section"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/viewPending"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/pending_uploads"
            android:background="@color/colorPrimary"
            android:text="@string/view_pending_uploads"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/postComplaint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/post"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/post_another_complaint"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</android.support.v7.widget.CardView>